books section added

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rashidtvmr.com",
+  "name": "raashid.me",
   "private": true,
   "description": "rashidtvmr - Blog",
   "version": "0.5.0",
