--- a/.github/workflows/deploy-ghpages.yml
+++ b/.github/workflows/deploy-ghpages.yml
@@ -2,7 +2,7 @@ name: Deploy Next.js static export to GitHub Pages (same repo)
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   workflow_dispatch:
 
 permissions:
@@ -16,23 +16,19 @@ concurrency:
 
 jobs:
   build:
+    if: github.repository == 'rashidtvmr/rashidtvmr.github.io'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          submodules: false
 
-      - name: Setup PNPM
-        uses: pnpm/action-setup@v3
-        with:
-          version: 8
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
 
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version-file: '.nvmrc'
           cache: 'pnpm'
 
       - name: Install dependencies
@@ -52,7 +48,6 @@ jobs:
           NEXT_PUBLIC_ENABLE_AI_SEARCH: 'false'
         run: pnpm build
 
-
       - name: Add .nojekyll
         run: touch out/.nojekyll
 
@@ -62,6 +57,7 @@ jobs:
           path: out
 
   deploy:
+    if: github.repository == 'rashidtvmr/rashidtvmr.github.io'
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
