--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "cy:open": "cypress open",
     "cy:run": "cypress run --browser chrome",
     "dev": "next dev -p 8080",
-    "deploy:ghpages": "STATIC_EXPORT=true NEXT_PUBLIC_ENABLE_AI_SEARCH=false pnpm build && cd out && git init && git checkout -b main && git add . && git commit -m 'Deploy to GitHub Pages' && git remote add origin git@github.com:rashidtvmr/rashidtvmr.github.io.git || git remote set-url origin git@github.com:rashidtvmr/rashidtvmr.github.io.git && git push -f origin main",
     "export": "next export",
     "format": "prettier --check \"./**/*.{js,jsx,ts,tsx}\"",
     "generate:og": "node ./scripts/generate-opengraph-images",
@@ -115,6 +114,11 @@
     "playwright-webkit": "^1.27.1",
     "prettier": "2.2.1",
     "typescript": "^4.9.4"
+  },
+  "packageManager": "pnpm@9.15.9",
+  "engines": {
+    "node": ">=18.17.0",
+    "pnpm": ">=9.0.0 <10.0.0"
   },
   "license": "MIT",
   "repository": {
