--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "dev": "next dev -p 8080",
     "export": "next export",
     "format": "prettier --check \"./**/*.{js,jsx,ts,tsx}\"",
+    "generate:llm": "node ./scripts/generate-llm",
     "generate:og": "node ./scripts/generate-opengraph-images",
     "generate:rss": "node ./scripts/generate-rss",
     "generate:sitemap": "node ./scripts/generate-sitemap",
     "link-ds": "rm -rf .next && pnpm link --global @maximeheckel/design-system",
     "lint": "eslint --ext=jsx,ts,tsx .",
-    "prebuild": "pnpm generate:rss && pnpm generate:sitemap",
+    "optimize-images": "node ./scripts/optimize-images.js",
+    "prebuild": "pnpm optimize-images && pnpm generate:rss && pnpm generate:sitemap && pnpm generate:llm",
     "start": "next start -p 8080",
     "test": "is-ci \"test:coverage\" \"test:watch\"",
     "test:coverage": "jest --coverage",
@@ -113,6 +115,7 @@
     "playwright": "1.17.1",
     "playwright-webkit": "^1.27.1",
     "prettier": "2.2.1",
+    "sharp": "^0.34.5",
     "typescript": "^4.9.4"
   },
   "packageManager": "pnpm@9.15.9",
